@@ -40,8 +40,8 @@ class MaskedInputCompileTest extends SourceCompileTestBase {
                 .get(new PageContext("testMaskedInput"));
         Form form = (Form) page.getWidget();
 
-        StandardField<?> field = (StandardField<?>) form.getComponent().getFieldsets().get(0)
-                .getRows().get(0).getCols().get(0).getFields().get(0);
+        StandardField<?> field = (StandardField<?>) form.getComponent().getFieldsets().getFirst()
+                .getRows().getFirst().getCols().getFirst().getFields().getFirst();
         MaskedInput input = (MaskedInput) field.getControl();
         assertThat(input.getId(), is("test"));
         assertThat(input.getSrc(), is("InputMask"));
@@ -52,8 +52,8 @@ class MaskedInputCompileTest extends SourceCompileTestBase {
         assertThat(input.getAutocomplete(), is("on"));
         assertThat(input.getInvalidText(), is("test invalid text"));
 
-        field = (StandardField<?>) form.getComponent().getFieldsets().get(0).getRows().get(1)
-                .getCols().get(0).getFields().get(0);
+        field = (StandardField<?>) form.getComponent().getFieldsets().getFirst().getRows().get(1)
+                .getCols().getFirst().getFields().getFirst();
         input = (MaskedInput) field.getControl();
         assertThat(input.getId(), is("testDefault"));
         assertThat(input.getClearOnBlur(), is(true));
